# sigma-pg

./: Cargo.toml  README.md  docker-compose.deps.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
init/: 01-keycloak-schema.sql
migrations/: 001_sigma_init.sql  002_constraints_and_indexes.sql  002_keycloak_schema.sql  002_order_schema.sql  003_cart_lines_cart_sku_unique.sql  003_sentry_schema.sql  003_service_roles_and_document.sql  004_addresses_payments_init.sql  004_identity_database_create.sql  005_payments_cardholder_name.sql  006_checkout_charges.sql  007_accounting_bills_order_id.sql  008_accounting_expenses.sql  009_accounting_receipts.sql
src/: api.rs  form.rs  health.rs  lib.rs  money.rs
src/api/: error_body.rs  store_error.rs
src/clients/: addresses.rs  cart.rs  catalog.rs  http.rs  identity.rs  internal.rs  mod.rs  orders.rs  session.rs  storefront.rs
src/clients/addresses/: address_summary.rs  addresses_client_error.rs
src/clients/cart/: cart_detail.rs  cart_error.rs  cart_line.rs  cart_line_detail.rs
src/clients/catalog/: catalog_error.rs  catalog_sku.rs  catalog_sku_component.rs  catalog_sku_kind.rs
src/clients/identity/: identity_error.rs  identity_user.rs  issuer_parts.rs  keycloak_user.rs  token_response.rs
src/clients/orders/: create_order.rs  create_order_line.rs  order.rs  order_error.rs  order_line.rs  order_status.rs
src/clients/session/: identity_status.rs  session_error.rs
src/clients/storefront/: listing.rs  price_book.rs  storefront_error.rs  storefront_item.rs
src/health/: check.rs  check_status.rs  health_report.rs  service_status.rs
