[package]
name = "sigma-pg"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Shared PostgreSQL connection and schema migrations for Sigma services"
publish = false

[dependencies]
anyhow = "1.0.70"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[[bin]]
name = "sigma-pg-migrate"
path = "src/bin/migrate.rs"
