[package]
name = "sigma-pg"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Shared PostgreSQL connection and schema migrations for Sigma services"
publish = false

# Standalone workspace root so CI can check out sigma-pg inside other repos.
[workspace]

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[[bin]]
name = "sigma-pg-migrate"
path = "src/bin/migrate.rs"
