[package]

name = "sigma-pg"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
description = "Shared PostgreSQL connection and schema migrations for Sigma services"
publish = false

# Standalone workspace root so CI can check out sigma-pg inside other repos.
[workspace]

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
warp = { version = "0.4.3", optional = true }

[features]
default = ["warp"]
warp = ["dep:warp"]

[[bin]]
name = "sigma-pg-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "sigma-pg-reset"
path = "src/bin/reset.rs"

[dev-dependencies]
temp-env = "0.3.6"
